# isp2-ipc

./: CMakeLists.txt
client/: CMakeLists.txt
client/impl/: rk_aiq_uapi_imgproc_ipc.c  rk_aiq_user_api_a3dlut.c  rk_aiq_user_api_ablc.c  rk_aiq_user_api_accm.c  rk_aiq_user_api_adebayer.c  rk_aiq_user_api_adehaze.c  rk_aiq_user_api_adpcc.c  rk_aiq_user_api_ae.c  rk_aiq_user_api_agamma.c  rk_aiq_user_api_ahdr.c  rk_aiq_user_api_alsc.c  rk_aiq_user_api_anr.c  rk_aiq_user_api_asharp.c  rk_aiq_user_api_awb.c  rk_aiq_user_api_sysctl.c  rk_aiq_user_imgproc_ipc.c
common/: config.h
common/mediactl/: mediactl.h
demo/: CMakeLists.txt  rkisp_demo.cpp
doc/: ISP IPC模块框架说明及接口规范.docx
interface/: rk_aiq_uapi_imgproc_ipc.h  rk_aiq_uapi_imgproc_ipc_ipc.h  rk_aiq_user_api_a3dlut_ipc.h  rk_aiq_user_api_accm_ipc.h  rk_aiq_user_api_adebayer_ipc.h  rk_aiq_user_api_adehaze_ipc.h  rk_aiq_user_api_adpcc_ipc.h  rk_aiq_user_api_ae_ipc.h  rk_aiq_user_api_agamma_ipc.h  rk_aiq_user_api_ahdr_ipc.h  rk_aiq_user_api_alsc_ipc.h  rk_aiq_user_api_anr_ipc.h  rk_aiq_user_api_asharp_ipc.h  rk_aiq_user_api_awb_ipc.h  rk_aiq_user_api_sysctl_ipc.h
protocol/: rk_aiq_uapi_imgproc_ptl.h  rk_aiq_user_api_a3dlut_ptl.h  rk_aiq_user_api_ablc_ptl.h  rk_aiq_user_api_accm_ptl.h  rk_aiq_user_api_adebayer_ptl.h  rk_aiq_user_api_adehaze_ptl.h  rk_aiq_user_api_adpcc_ptl.h  rk_aiq_user_api_ae_ptl.h  rk_aiq_user_api_agamma_ptl.h  rk_aiq_user_api_ahdr_ptl.h  rk_aiq_user_api_alsc_ptl.h  rk_aiq_user_api_anr_ptl.h  rk_aiq_user_api_asharp_ptl.h  rk_aiq_user_api_awb_ptl.h  rk_aiq_user_api_sysctl_ptl.h
server/: CMakeLists.txt  db_monitor.c  db_monitor.h  fun_map.h  isp_func.c  isp_func.h  main.c  mediactl.c
server/impl/: rk_aiq_uapi_imgproc_ipc.c  rk_aiq_user_api_a3dlut_ipc.c  rk_aiq_user_api_ablc_ipc.c  rk_aiq_user_api_accm_ipc.c  rk_aiq_user_api_adebayer_ipc.c  rk_aiq_user_api_adehaze_ipc.c  rk_aiq_user_api_adpcc_ipc.c  rk_aiq_user_api_ae_ipc.c  rk_aiq_user_api_agamma_ipc.c  rk_aiq_user_api_ahdr_ipc.c  rk_aiq_user_api_alsc_ipc.c  rk_aiq_user_api_anr_ipc.c  rk_aiq_user_api_asharp_ipc.c  rk_aiq_user_api_awb_ipc.c  rk_aiq_user_api_sysctl_ipc.c
